--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
   "license": "MIT",
   "readmeFilename": "README.md",
   "peerDependencies": {
-    "react": "^16.8.1",
-    "react-native": ">=0.59.0-rc.0 <1.0.x"
+      "react-native": ">=0.59.10"
   },
   "devDependencies": {
     "react": "^16.8.3",
